--- a/FEIG/FEIG.csproj
+++ b/FEIG/FEIG.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Cursor.cs" />
     <Compile Include="CursorHelper.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="SpriteSheet.cs" />
     <Compile Include="HUD.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="NetExtensions.cs" />
