--- a/FEIG/FEIG.csproj
+++ b/FEIG/FEIG.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Subsprite.cs" />
     <Compile Include="Tile.cs" />
+    <Compile Include="Tileset.cs" />
     <Compile Include="Unit.cs" />
     <Compile Include="Weapon.cs" />
   </ItemGroup>
