--- a/FEIG/FEIG.csproj
+++ b/FEIG/FEIG.csproj
@@ -55,13 +55,12 @@
     <Compile Include="HUD.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="NetExtensions.cs" />
-    <Compile Include="Palette.cs" />
     <Compile Include="PauseMenu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Subsprite.cs" />
     <Compile Include="Tile.cs" />
-    <Compile Include="Tileset.cs" />
+    <Compile Include="TileSet.cs" />
     <Compile Include="Unit.cs" />
     <Compile Include="Weapon.cs" />
   </ItemGroup>
