--- a/FEIG/FEIG.csproj
+++ b/FEIG/FEIG.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Cursor.cs" />
     <Compile Include="CursorHelper.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="PathFinder.cs" />
     <Compile Include="SpriteSheet.cs" />
     <Compile Include="HUD.cs" />
     <Compile Include="Level.cs" />
@@ -58,7 +59,8 @@
     <Compile Include="PauseMenu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Subsprite.cs" />
+    <Compile Include="Stats.cs" />
+    <Compile Include="SubTexture.cs" />
     <Compile Include="Tile.cs" />
     <Compile Include="TileSet.cs" />
     <Compile Include="Unit.cs" />
