--- a/FEIG/FEIG.csproj
+++ b/FEIG/FEIG.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Input\CursorInput.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="PathFinder.cs" />
+    <Compile Include="SimpleTimer.cs" />
     <Compile Include="SpriteSheet.cs" />
     <Compile Include="HUD.cs" />
     <Compile Include="Level.cs" />
