Fixed null reference with animated spritesheet
Turns out it was the sprite sheet I had literally just set to null before the error started appearing. Go figure.
Now it builds, and it's using the animated texture, but it still doesn't animate.

--- a/FEIG/FEIG.csproj
+++ b/FEIG/FEIG.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="ActionBar.cs" />
     <Compile Include="AnimatedTexture.cs" />
+    <Compile Include="AnimatedTileSet.cs" />
     <Compile Include="Input\Cursor.cs" />
     <Compile Include="Input\CursorAction.cs" />
     <Compile Include="Input\CursorContext.cs" />
