--- a/FEIG/FEIG.csproj
+++ b/FEIG/FEIG.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="ActionBar.cs" />
     <Compile Include="AnimatedTexture.cs" />
+    <Compile Include="AnimatedTile.cs" />
     <Compile Include="AnimatedTileSet.cs" />
     <Compile Include="Input\Cursor.cs" />
     <Compile Include="Input\CursorAction.cs" />
